[metadata]
name = jaxl-python
version = attr: jaxl.api.client._scm_version.version
url = https://github.com/jaxl-innovations-private-limited/jaxl-python
project_urls =
  CI: GitHub = https://github.com/jaxl-innovations-private-limited/jaxl-python/actions
  GitHub: discussions = https://github.com/jaxl-innovations-private-limited/jaxl-python/discussions
  GitHub: issues = https://github.com/jaxl-innovations-private-limited/jaxl-python/issues
  GitHub: repo = https://github.com/jaxl-innovations-private-limited/jaxl-python
download_url = https://github.com/jaxl-innovations-private-limited/jaxl-python/archive/main.zip
description = Official Python SDK and CLI for interfacing with the Jaxl API. Manage calls, messages, IVRs, devices, teams, payments, campaigns, streaming transcriptions and AI Agents. Built on OpenAPI, it offers both generated API clients and Pythonic wrappers for ease of use.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jaxl Innovations Private Limited
author_email = engineering@jaxl.com
license = 'Proprietary'
license_files =
  LICENSE.md
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console
  Environment :: No Input/Output (Daemon)
  Environment :: Web Environment
  Environment :: MacOS X
  Environment :: Plugins
  Environment :: Win32 (MS Windows)

  Natural Language :: English

  Operating System :: MacOS
  Operating System :: MacOS :: MacOS 9
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: Android
  Operating System :: OS Independent

  Programming Language :: Python :: Implementation
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Typing :: Typed
keywords =
  jaxl
  api
  client
  sdk
  openapi

[options]
python_requires = >= 3.9
packages = find_namespace:
include_package_data = True
zip_safe = False
install_requires =
  setuptools==80.9.0
  # OpenAPI requirements
  httpx==0.28.1
  attrs >= 21.3.0
  python-dateutil >= 2.8.0, < 3
  # JaxlApiClient requirements
  cryptography==46.0.2
  PyJWT==2.8.0
  # JaxlApiClient requests auth adapter requirements
  requests==2.32.4
  pydantic==2.11.9

[options.extras_require]
dev =
  isort
  mypy
  autoflake
  pylint==3.3.3
docs =
  pdoc3==0.11.6
  mkdocs==1.6.1
  mkdocstrings==0.30.1
  mkdocstrings-python==1.18.2
types =
  types-python-dateutil
  types-PyYAML==6.0.12.20250915
  types-Pygments==2.19.0.20250809
  types-ujson==5.10.0.20250822
  types-requests==2.32.0.20240602
app =
  uvicorn[standard]==0.35.0
  fastapi==0.116.1
grout =
  proxy.py==2.4.10
silence =
  webrtcvad==2.0.10
  #setuptools==80.9.0
transcribe =
  openai-whisper @ git+https://github.com/openai/whisper.git
  numpy==1.26.4
openai =
  openai==2.1.0
release =
  build
  twine

[options.packages.find]
include =
  jaxl.*

[options.package_data]
jaxl =
  py.typed

[options.entry_points]
console_scripts =
  jaxl = jaxl.api.cli:entry_point

[mypy]
ignore_missing_imports = True
pretty = True
strict = True
show_error_codes = True
show_error_context = True
show_column_numbers = True
namespace_packages = False
plugins = pydantic.mypy
